Fecha automÃtica en la ventana de liquidacion
Afiliados activos

--- a/gui/liquidadores/liquidadorAfiliados.ui
+++ b/gui/liquidadores/liquidadorAfiliados.ui
@@ -456,14 +456,14 @@ background-color: #F0F5EF}
      <property name="checkable">
       <bool>false</bool>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
+     <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,10">
       <property name="leftMargin">
        <number>5</number>
       </property>
       <property name="rightMargin">
        <number>5</number>
       </property>
-      <item row="13" column="0" colspan="2">
+      <item row="8" column="0" colspan="2">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -475,6 +475,39 @@ background-color: #F0F5EF}
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>Arial</family>
+          <pointsize>8</pointsize>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
+        </property>
+        <property name="text">
+         <string>Liquidación para afiliados ACTIVOS</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::AutoText</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
       </item>
       <item row="2" column="0">
        <widget class="QGroupBox" name="groupBox_2">
@@ -494,7 +527,7 @@ background-color:#FFFFFF
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
          <item row="3" column="1">
-          <widget class="QComboBox" name="comboBox_2">
+          <widget class="QComboBox" name="liq_mes">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -581,7 +614,7 @@ background-color:#FFFFFF
           </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="liq_anio">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -631,7 +664,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="2" column="0" colspan="2">
-          <widget class="QDateEdit" name="dateEdit">
+          <widget class="QDateEdit" name="liq_fecha">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -680,7 +713,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="5" column="0" colspan="2">
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="btn_procesar_liq">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -696,12 +729,12 @@ color: #FFFFFF;
             </font>
            </property>
            <property name="styleSheet">
-            <string notr="true">#pushButton{
+            <string notr="true">#btn_procesar_liq{
 background-color:#0A7DD0;
 color: #ffffff
 }
 
-#pushButton:hover{
+#btn_procesar_liq:hover{
 background-color:#1067A5;
 }
 </string>
@@ -805,7 +838,7 @@ background-color:#FFFFFF
           </widget>
          </item>
          <item row="4" column="0">
-          <widget class="QLineEdit" name="lineEdit_2">
+          <widget class="QLineEdit" name="liq_importe_total">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -822,7 +855,7 @@ background-color:#FFFFFF
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QLineEdit" name="lineEdit_3">
+          <widget class="QLineEdit" name="liq_cantidad_total">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -866,7 +899,7 @@ background-color:#FFFFFF
           </widget>
          </item>
          <item row="5" column="0">
-          <widget class="QPushButton" name="pushButton_exportar">
+          <widget class="QPushButton" name="btn_exportar">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -882,12 +915,12 @@ background-color:#FFFFFF
             </font>
            </property>
            <property name="styleSheet">
-            <string notr="true">#pushButton_exportar{
+            <string notr="true">#btn_exportar{
 background-color:#DF720A;
 color: #FFFFFF;
 }
 
-#pushButton_exportar:hover{
+#btn_exportar:hover{
 background-color:#E09249 ;
 color: #000000;
 }</string>
@@ -909,104 +942,6 @@ color: #000000;
          </item>
         </layout>
        </widget>
-      </item>
-      <item row="8" column="0">
-       <spacer name="verticalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="font">
-         <font>
-          <family>Arial</family>
-          <pointsize>8</pointsize>
-          <weight>50</weight>
-          <bold>false</bold>
-         </font>
-        </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-        <property name="frameShape">
-         <enum>QFrame::NoFrame</enum>
-        </property>
-        <property name="text">
-         <string>Liquidación para afiliados ACTIVOS</string>
-        </property>
-        <property name="textFormat">
-         <enum>Qt::AutoText</enum>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="0">
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="11" column="0">
-       <spacer name="verticalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="9" column="0">
-       <spacer name="verticalSpacer_5">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="10" column="0">
-       <spacer name="verticalSpacer_6">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </widget>
