--- a/gui/liquidadores/liquidadorJubilados.ui
+++ b/gui/liquidadores/liquidadorJubilados.ui
@@ -35,7 +35,7 @@ background-color: #F0F5EF}
      <property name="checkable">
       <bool>false</bool>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3">
+     <layout class="QGridLayout" name="gridLayout_3" rowstretch="0,0,0,0,0,0,0,0,0,10">
       <property name="leftMargin">
        <number>5</number>
       </property>
@@ -74,6 +74,19 @@ background-color: #F0F5EF}
          <set>Qt::AlignCenter</set>
         </property>
        </widget>
+      </item>
+      <item row="9" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item row="2" column="0" colspan="2">
        <widget class="QGroupBox" name="groupBox_4">
@@ -207,7 +220,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QDateEdit" name="dateEdit">
+          <widget class="QDateEdit" name="liqj_fecha_0">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -322,7 +335,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QDateEdit" name="dateEdit_7">
+          <widget class="QDateEdit" name="liqj_fecha_123">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -398,7 +411,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="6" column="1">
-          <widget class="QDateEdit" name="dateEdit_3">
+          <widget class="QDateEdit" name="liqj_fecha_789">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -414,7 +427,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QDateEdit" name="dateEdit_2">
+          <widget class="QDateEdit" name="liqj_fecha_456">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -430,7 +443,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="9" column="0" colspan="2">
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="btn_liquidar">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -446,12 +459,12 @@ color: #FFFFFF;
             </font>
            </property>
            <property name="styleSheet">
-            <string notr="true">#pushButton_2{
+            <string notr="true">#btn_liquidar{
 background-color:#0A7DD0;
 color: #ffffff
 }
 
-#pushButton_2:hover{
+#btn_liquidar:hover{
 background-color:#1067A5;
 }
 </string>
@@ -505,7 +518,7 @@ color: #FFFFFF;
           </widget>
          </item>
          <item row="8" column="1">
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="liqj_anio">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -605,7 +618,7 @@ background-color:#FFFFFF
           </widget>
          </item>
          <item row="2" column="0" colspan="2">
-          <widget class="QLineEdit" name="lineEdit_5">
+          <widget class="QLineEdit" name="liqj_cantidad_total">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -622,7 +635,7 @@ background-color:#FFFFFF
           </widget>
          </item>
          <item row="4" column="0" colspan="2">
-          <widget class="QLineEdit" name="lineEdit_6">
+          <widget class="QLineEdit" name="liqj_importe_total">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -666,7 +679,7 @@ background-color:#FFFFFF
           </widget>
          </item>
          <item row="5" column="0" colspan="2">
-          <widget class="QPushButton" name="pushButton_exportar">
+          <widget class="QPushButton" name="btn_exportar">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -682,12 +695,12 @@ background-color:#FFFFFF
             </font>
            </property>
            <property name="styleSheet">
-            <string notr="true">#pushButton_exportar{
+            <string notr="true">#btn_exportar{
 background-color:#DF720A;
 color: #FFFFFF;
 }
 
-#pushButton_exportar:hover{
+#btn_exportar:hover{
 background-color:#E09249 ;
 color: #000000;
 }</string>
@@ -709,71 +722,6 @@ color: #000000;
          </item>
         </layout>
        </widget>
-      </item>
-      <item row="13" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="11" column="0">
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="9" column="0">
-       <spacer name="verticalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="12" column="0">
-       <spacer name="verticalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="10" column="0">
-       <spacer name="verticalSpacer_5">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </widget>
